fixed spacing

--- a/frontend/src/app/components/module7/BikeInjuries.module.css
+++ b/frontend/src/app/components/module7/BikeInjuries.module.css
@@ -40,7 +40,7 @@
 
 .point {
   display: flex;
-  width: 1004px;
+  width: 940px;
   padding: 32px;
   align-items: center;
   gap: 32px;
